--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,65 @@
                 </plugins>
             </build>
         </profile>
+        <!--JENKINS BUILD PROFILE-->
+        <!--JBoss AS 7.2 managed container environment -->
+        <!--default browser-->
+        <profile>
+            <id>jenkins-jboss-build</id>
+            <dependencies>
+                <!--JavaEE enviroment + container-->
+                <dependency>
+                    <groupId>org.jboss.spec</groupId>
+                    <artifactId>jboss-javaee-6.0</artifactId>
+                    <version>${version.javaee-spec}</version>
+                    <type>pom</type>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <version>${version.jboss.container}</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.arquillian.protocol</groupId>
+                    <artifactId>arquillian-protocol-servlet</artifactId>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <testResources>
+                    <!--jboss persistance unit-->
+                    <testResource>
+                        <directory>src/test/resources-jboss</directory>
+                    </testResource>
+                </testResources>
+                <plugins>
+                    <!--Unit IT runner -> IT are run after compile phase-->
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.12</version>
+                    </plugin>
+                    <!--Integration tests runner-->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.16</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <!--JENKINS PROFILE-->
         <!--JBoss AS 7.2 managed container environment -->
         <!--default browser-->
@@ -230,7 +289,7 @@
         </profile>
         <!--JENKINS PROFILE-->
         <!--JBoss AS 7.2 managed container environment -->
-        <!--default browser-->
+        <!--opera browser-->
         <profile>
             <id>jenkins-jboss-FT</id>
             <properties>
