--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@
             </build>
         </profile>
         <!--JENKINS BUILD PROFILE-->
-        <!--JBoss AS 7.2 managed container environment -->
+        <!--JBoss AS 7.1.1 managed container environment -->
         <!--default browser-->
         <profile>
             <id>jenkins-jboss-build</id>
@@ -178,7 +178,7 @@
                 <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-arquillian-container-managed</artifactId>
-                    <version>${version.jboss.container}</version>
+                    <version>7.1.1.Final</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
@@ -221,7 +221,7 @@
             </build>
         </profile>
         <!--JENKINS PROFILE-->
-        <!--JBoss AS 7.2 managed container environment -->
+        <!--JBoss AS 7.1.1 managed container environment -->
         <!--default browser-->
         <profile>
             <id>jenkins-jboss-IT</id>
@@ -237,7 +237,7 @@
                 <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-arquillian-container-managed</artifactId>
-                    <version>${version.jboss.container}</version>
+                    <version>7.1.1.Final</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
