--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
         <profile>
             <id>dev-jboss</id>
             <properties>
-                <browser>firefox</browser>
+                <browser>phantomjs</browser>
             </properties>
             <dependencies>
                 <!--JavaEE enviroment + container-->
@@ -105,6 +105,11 @@
                     <groupId>org.jboss.arquillian.protocol</groupId>
                     <artifactId>arquillian-protocol-servlet</artifactId>
                     <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.arquillian.extension</groupId>
+                    <artifactId>arquillian-phantom-driver</artifactId>
+                    <version>1.1.0.Final</version>
                 </dependency>
             </dependencies>
             <build>
@@ -292,9 +297,6 @@
         <!--opera browser-->
         <profile>
             <id>jenkins-jboss-FT</id>
-            <properties>
-                <browser>opera</browser>
-            </properties>
             <dependencies>
                 <!--JavaEE enviroment + container-->
                 <dependency>
@@ -415,14 +417,14 @@
             <dependency>
                 <groupId>org.jboss.arquillian.extension</groupId>
                 <artifactId>arquillian-drone-bom</artifactId>
-                <version>1.2.0.Final</version>
+                <version>1.2.1.Final</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.jboss.arquillian.selenium</groupId>
                 <artifactId>selenium-bom</artifactId>
-                <version>2.35.0</version>
+                <version>2.37.1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
