--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-phantom-binary</artifactId>
+            <version>1.9.2</version>
+            <type>pom</type>
+            <scope>test</scope>
+        </dependency>
+
         <!--Vaadin-->
         <dependency>
             <groupId>com.vaadin</groupId>
@@ -80,7 +88,7 @@
     <profiles>
         <!--DEVELOPER PROFILE-->
         <!--JBoss AS 7.2 remote container environment -->
-        <!--Firefox browser-->
+        <!--default browser-->
         <profile>
             <id>dev-jboss</id>
             <properties>
