--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <!--Testing tools-->
         <version.junit>4.11</version.junit>
         <version.graphene>2.0.0.Final</version.graphene>
-        <version.jboss.container>7.1.1.Final</version.jboss.container>
+        <version.jboss.container>7.2.0.Final</version.jboss.container>
         <!--Vaadin view-->
         <version.vaadin>7.1.7</version.vaadin>
         <version.vaadin.plugin>${version.vaadin}</version.vaadin.plugin>
@@ -41,6 +41,7 @@
         <test.skip.ft>true</test.skip.ft>
         <browser>phantomjs</browser>
         <phantomjs_home>${env.PHANTOMJS_HOME}</phantomjs_home>
+        <jboss_home>${env.JBOSS_HOME}</jboss_home>
     </properties>
 
     <!--C O M M O N-->
@@ -125,6 +126,20 @@
                     </testResource>
                 </testResources>
                 <plugins>
+                    <!--<plugin>-->
+                        <!--<groupId>com.lazerycode.jmeter</groupId>-->
+                        <!--<artifactId>jmeter-maven-plugin</artifactId>-->
+                        <!--<version>1.8.1</version>-->
+                        <!--<executions>-->
+                            <!--<execution>-->
+                                <!--<id>jmeter-tests</id>-->
+                                <!--<phase>verify</phase>-->
+                                <!--<goals>-->
+                                    <!--<goal>jmeter</goal>-->
+                                <!--</goals>-->
+                            <!--</execution>-->
+                        <!--</executions>-->
+                    <!--</plugin>-->
                     <!--JBoss deploy plugin-->
                     <plugin>
                         <groupId>org.jboss.as.plugins</groupId>
@@ -146,7 +161,10 @@
         <!--J E N K I N S-->
         <!--JBoss AS 7.1.1 managed container environment -->
         <profile>
-            <id>jenkins-jboss</id>
+            <id>jenkins-jboss-as-7.1.1</id>
+            <!--<properties>-->
+                <!--<jboss_home>C:/JBoss/jboss-as-7.1.1.Final</jboss_home>-->
+            <!--</properties>-->
             <dependencies>
                 <!--JavaEE enviroment + container-->
                 <dependency>
@@ -159,7 +177,57 @@
                 <dependency>
                     <groupId>org.jboss.as</groupId>
                     <artifactId>jboss-as-arquillian-container-managed</artifactId>
-                    <version>${version.jboss.container}</version>
+                    <version>7.1.1.Final</version>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.arquillian.protocol</groupId>
+                    <artifactId>arquillian-protocol-servlet</artifactId>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+            <build>
+                <testResources>
+                    <!--jboss persistance unit-->
+                    <testResource>
+                        <directory>src/test/resources-jboss</directory>
+                    </testResource>
+                </testResources>
+                <!--<plugins>-->
+                    <!--<plugin>-->
+                        <!--<groupId>org.apache.maven.plugins</groupId>-->
+                        <!--<artifactId>maven-failsafe-plugin</artifactId>-->
+                        <!--<version>${version.plugin.failsafe}</version>-->
+                        <!--<configuration>-->
+                            <!--<systemPropertyVariables>-->
+                                <!--<arquillian.launch>jbossas_managed</arquillian.launch>-->
+                            <!--</systemPropertyVariables>-->
+                        <!--</configuration>-->
+                    <!--</plugin>-->
+                <!--</plugins>-->
+            </build>
+        </profile>
+
+        <!--J E N K I N S-->
+        <!--JBoss AS 7.2.0 managed container environment -->
+        <profile>
+            <id>jenkins-jboss-as-7.2.0</id>
+            <!--<properties>-->
+                <!--<jboss_home>C:/JBoss/jboss-as-7.2.0.Final</jboss_home>-->
+            <!--</properties>-->
+            <dependencies>
+                <!--JavaEE enviroment + container-->
+                <dependency>
+                    <groupId>org.jboss.spec</groupId>
+                    <artifactId>jboss-javaee-6.0</artifactId>
+                    <version>${version.javaee-spec}</version>
+                    <type>pom</type>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <version>7.2.0.Final</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
